[gd_scene load_steps=25 format=3 uid="uid://1g6hpkx5cup3"]

[ext_resource type="Script" uid="uid://cm4s7gmj0h88" path="res://Scripts/Player/Gui/TeamViewer/Team_Viewer.gd" id="1_i0y64"]
[ext_resource type="Texture2D" uid="uid://dhf6a0ln255wq" path="res://Resources/Images/Gui/InvBackground.png" id="1_kwscj"]
[ext_resource type="Script" uid="uid://bq0ldgy5jpuio" path="res://Scripts/Player/Gui/TeamViewer/Handle_characters.gd" id="2_3hw6n"]
[ext_resource type="Script" uid="uid://fbcs08d4nbpt" path="res://Scripts/Player/Gui/TeamViewer/Info.gd" id="4_jh6ly"]
[ext_resource type="Texture2D" uid="uid://ds8bbt6lunwsw" path="res://Resources/Images/Characters/Gino/Idle/1.png" id="5_kdxv7"]
[ext_resource type="Texture2D" uid="uid://ditmor6dc08i" path="res://Resources/Images/Characters/Gino/Idle/2.png" id="6_eqhfq"]
[ext_resource type="Texture2D" uid="uid://ckoum6b3kyr05" path="res://Resources/Images/Icone/Stat/HP.png" id="7_qtpqx"]
[ext_resource type="Texture2D" uid="uid://b3fusq6hh5gkg" path="res://Resources/Images/Icone/Stat/ATT.png" id="8_pkyrt"]
[ext_resource type="Texture2D" uid="uid://dhy0k10lbue41" path="res://Resources/Images/Icone/Stat/PI.png" id="9_xobq3"]
[ext_resource type="Texture2D" uid="uid://de7e7o17r13dr" path="res://Resources/Images/Icone/Stat/DIF.png" id="10_nld14"]
[ext_resource type="Texture2D" uid="uid://da3b0ojk16agb" path="res://Resources/Images/Icone/Stat/INT.png" id="11_2i6bn"]
[ext_resource type="Texture2D" uid="uid://cpciw6myxws6m" path="res://Resources/Images/Icone/Stat/SPEED.png" id="12_73s0x"]
[ext_resource type="Script" uid="uid://b5m0f337pev84" path="res://Scripts/Player/Gui/TeamViewer/Team.gd" id="13_c5mhq"]
[ext_resource type="Script" uid="uid://dmet37db6c6p4" path="res://Scripts/Player/Gui/TeamViewer/GestisciMosse/gestisci_mosse.gd" id="14_8xedm"]
[ext_resource type="Script" uid="uid://dr3b8c8rvfqeg" path="res://Scripts/Player/Gui/TeamViewer/GestisciMosse/GenerateLearnableList.gd" id="15_6l66l"]
[ext_resource type="Script" uid="uid://diaxly5v0fepc" path="res://Scripts/Player/Gui/TeamViewer/GestisciMosse/current_move.gd" id="16_6l66l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ouqr"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="Shader" id="Shader_6l66l"]
code = "//ATTENTION:
//  THIS IS SHADE AUTOGENERATED BY
//  THE ADDON SPRITE-SHADER-MIXER
//  ANY MANUAL CHANGES WILL BE REMOVED WHEN THE ADDON
//  UPDATES THIS SHADER.
//  ANYWAY, YOU CAN SAVE THE CURRENT VERSION AS A RESOURCE FILE.
//SHADERS:
shader_type canvas_item;

uniform float opacity:hint_range(0.0, 1.0, 0.01)=1.;

	

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec2 size = vec2(textureSize(TEXTURE, 0));
	vec2 uv = UV;
	vec2 screen_uv = SCREEN_UV;



	color.a*=opacity;
	COLOR=color;
}

void vertex() {
	
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fer5c"]
shader = SubResource("Shader_6l66l")
shader_parameter/opacity = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_y2mgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kdxv7")
}, {
"duration": 1.0,
"texture": ExtResource("6_eqhfq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6q"]
bg_color = Color(0.702655, 0.898377, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmqb4"]
bg_color = Color(0, 0.696077, 0.922888, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xedm"]
bg_color = Color(0.729412, 0.0745098, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l66l"]
bg_color = Color(0, 0.580695, 0.124485, 1)

[node name="TeamViewer" type="Control" groups=["TV"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0y64")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1ouqr")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 110.0
offset_right = 403.0
offset_bottom = 210.0
scale = Vector2(8, 8)
mouse_filter = 0
texture = ExtResource("1_kwscj")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 295.0
offset_top = 165.0
offset_right = 751.0
offset_bottom = 830.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_right = 442.0
offset_bottom = 664.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
script = ExtResource("2_3hw6n")

[node name="Info" type="Panel" parent="."]
layout_mode = 0
offset_left = 817.0
offset_top = 165.0
offset_right = 1419.0
offset_bottom = 830.0
script = ExtResource("4_jh6ly")

[node name="Name" type="Label" parent="Info"]
layout_mode = 0
offset_left = 37.0
offset_top = 25.0
offset_right = 396.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 50
text = "Name and Level"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Info"]
material = SubResource("ShaderMaterial_fer5c")
position = Vector2(194, 253)
sprite_frames = SubResource("SpriteFrames_y2mgx")
frame_progress = 0.265091

[node name="Info" type="Label" parent="Info"]
layout_mode = 0
offset_left = 362.0
offset_top = 138.0
offset_right = 576.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 25
text = "Types: AI/Meme
"

[node name="Stats" type="Control" parent="Info"]
layout_mode = 3
anchors_preset = 0
offset_top = 580.0
offset_right = 40.0
offset_bottom = 620.0

[node name="HP" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 14.0
offset_top = 2.0
offset_right = 89.0
offset_bottom = 77.0
texture = ExtResource("7_qtpqx")

[node name="Label" type="Label" parent="Info/Stats/HP"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="ATT" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 114.0
offset_top = 2.0
offset_right = 189.0
offset_bottom = 77.0
texture = ExtResource("8_pkyrt")

[node name="Label" type="Label" parent="Info/Stats/ATT"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="PI" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 214.0
offset_top = 2.0
offset_right = 289.0
offset_bottom = 77.0
texture = ExtResource("9_xobq3")

[node name="Label" type="Label" parent="Info/Stats/PI"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="DIF" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 314.0
offset_top = 2.0
offset_right = 389.0
offset_bottom = 77.0
texture = ExtResource("10_nld14")

[node name="Label" type="Label" parent="Info/Stats/DIF"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="INT" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 414.0
offset_top = 2.0
offset_right = 489.0
offset_bottom = 77.0
texture = ExtResource("11_2i6bn")

[node name="Label" type="Label" parent="Info/Stats/INT"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="SPEED" type="TextureRect" parent="Info/Stats"]
layout_mode = 0
offset_left = 514.0
offset_top = 2.0
offset_right = 589.0
offset_bottom = 77.0
texture = ExtResource("12_73s0x")

[node name="Label" type="Label" parent="Info/Stats/SPEED"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Buttons" type="Control" parent="Info"]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = 413.0
offset_right = 57.0
offset_bottom = 453.0
scale = Vector2(0.8, 0.8)

[node name="0" type="Button" parent="Info/Buttons"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Mossa1"

[node name="1" type="Button" parent="Info/Buttons"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Mossa2"

[node name="2" type="Button" parent="Info/Buttons"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Mossa3"

[node name="3" type="Button" parent="Info/Buttons"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Mossa4"

[node name="MoveInfo" type="Panel" parent="Info"]
layout_mode = 0
offset_left = 195.0
offset_top = 413.0
offset_right = 567.0
offset_bottom = 571.0

[node name="Name" type="Label" parent="Info/MoveInfo"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 355.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="Dscription" type="Label" parent="Info/MoveInfo"]
layout_mode = 0
offset_left = 16.0
offset_top = 108.0
offset_right = 355.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 13
text = "descrizione molto accurata della mossa lunga solo 3 righi perch√® si, ora vai via!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
autowrap_mode = 3

[node name="Data" type="Label" parent="Info/MoveInfo"]
layout_mode = 0
offset_left = 17.0
offset_top = 45.0
offset_right = 356.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 14
text = "Type: Normal
Potenza: 40
Precisione: 100"
autowrap_mode = 3

[node name="MoveType" type="ColorRect" parent="Info/MoveInfo"]
layout_mode = 0
offset_left = 315.0
offset_top = 11.0
offset_right = 345.0
offset_bottom = 41.0

[node name="Exp" type="ProgressBar" parent="Info"]
layout_mode = 0
offset_left = 365.0
offset_top = 189.0
offset_right = 549.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_e2o6q")
theme_override_styles/fill = SubResource("StyleBoxFlat_tmqb4")

[node name="HP" type="ProgressBar" parent="Info"]
layout_mode = 0
offset_left = 366.0
offset_top = 227.0
offset_right = 550.0
offset_bottom = 254.0
theme_override_styles/background = SubResource("StyleBoxFlat_8xedm")
theme_override_styles/fill = SubResource("StyleBoxFlat_6l66l")

[node name="GestisciMosseButton" type="Button" parent="Info"]
layout_mode = 0
offset_left = 367.0
offset_top = 271.0
offset_right = 548.0
offset_bottom = 320.0
text = "Gestisci mosse"

[node name="Team" type="Panel" parent="."]
layout_mode = 0
offset_left = 1467.0
offset_top = 184.0
offset_right = 1641.0
offset_bottom = 799.0

[node name="VBoxContainer" type="VBoxContainer" parent="Team"]
layout_mode = 0
offset_right = 116.0
offset_bottom = 412.0
scale = Vector2(1.5, 1.5)
alignment = 1
script = ExtResource("13_c5mhq")

[node name="GestisciMosse" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 11
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_8xedm")

[node name="Background" type="Panel" parent="GestisciMosse"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1ouqr")

[node name="NinePatchRect" type="NinePatchRect" parent="GestisciMosse"]
layout_mode = 0
offset_left = 591.0
offset_top = 200.0
offset_right = 685.0
offset_bottom = 298.0
scale = Vector2(8, 8)
mouse_filter = 0
texture = ExtResource("1_kwscj")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="LearnableMoves" type="PanelContainer" parent="GestisciMosse"]
layout_mode = 0
offset_left = 629.0
offset_top = 245.0
offset_right = 1079.0
offset_bottom = 724.0

[node name="ScrollContainer" type="ScrollContainer" parent="GestisciMosse/LearnableMoves"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GestisciMosse/LearnableMoves/ScrollContainer"]
layout_mode = 2
columns = 3
script = ExtResource("15_6l66l")

[node name="CurrentMove" type="PanelContainer" parent="GestisciMosse"]
layout_mode = 0
offset_left = 1136.0
offset_top = 248.0
offset_right = 1236.0
offset_bottom = 728.0

[node name="VBoxContainer" type="VBoxContainer" parent="GestisciMosse/CurrentMove"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("16_6l66l")

[node name="Button" type="Button" parent="GestisciMosse"]
layout_mode = 0
offset_left = 1282.0
offset_top = 224.0
offset_right = 1319.0
offset_bottom = 261.0
text = "x"

[node name="MoveInfo" type="Panel" parent="GestisciMosse"]
layout_mode = 0
offset_left = 633.0
offset_top = 750.0
offset_right = 1272.0
offset_bottom = 943.0

[node name="Name" type="Label" parent="GestisciMosse/MoveInfo"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 575.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="Dscription" type="Label" parent="GestisciMosse/MoveInfo"]
layout_mode = 0
offset_left = 17.0
offset_top = 137.0
offset_right = 605.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 17
text = "descrizione molto accurata della mossa lunga solo 3 righi perch√® si, ora vai via!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
autowrap_mode = 3

[node name="Data" type="Label" parent="GestisciMosse/MoveInfo"]
layout_mode = 0
offset_left = 17.0
offset_top = 45.0
offset_right = 598.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 20
text = "Type: Normal
Potenza: 40
Precisione: 100"
autowrap_mode = 3

[node name="MoveType" type="ColorRect" parent="GestisciMosse/MoveInfo"]
layout_mode = 0
offset_left = 570.0
offset_top = 14.0
offset_right = 600.0
offset_bottom = 44.0

[connection signal="pressed" from="Info/GestisciMosseButton" to="." method="_on_gestisci_mosse_pressed"]
[connection signal="pressed" from="GestisciMosse/Button" to="GestisciMosse" method="_on_button_pressed"]
